#9018_エラーメッセージ追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -506,6 +506,9 @@ CompleteArrangementLicenseError.MSG = 該当の手配業務に紐づくライセ
 CsvRecordCountsError.ID = RAR00029
 CsvRecordCountsError.TYPE = Error
 CsvRecordCountsError.MSG = 出力対象の契約とCSVの出力件数が一致しません。
+ArrangementMonthMisalignCheckError.ID = RAR00030
+ArrangementMonthMisalignCheckError.TYPE = Error
+ArrangementMonthMisalignCheckError.MSG = 導入希望日から1ヵ月以上経過しているため、承認依頼できません。再申込が必要です。（詳細はITサービスポータルをご確認ください。）
 
 #エラーID(コミュニケーション)
 EntityDoesNotExistCommunication.ID = RCM00001
