--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -216,6 +216,9 @@ FileFormatInvalidError.MSG = 選択したファイルは取込できません。
 RequiredFileExtensionNotMatchError.ID = ROT00116
 RequiredFileExtensionNotMatchError.TYPE = Error
 RequiredFileExtensionNotMatchError.MSG = {0}の拡張子が設定可能な拡張子ではありません。設定可能な拡張子は{1}です。
+ZipCreatingError.ID = ROT00117
+ZipCreatingError.TYPE = Error
+ZipCreatingError.MSG = 圧縮ファイルの作成に失敗しました。
 
 #エラーID(共通:その他)
 UnsupportedProcessError.ID = ROT90001
