#8607 延長可能機種無しのため契約自動更新が行えない場合のエラーメッセージを追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -435,6 +435,9 @@ ContractDateMonthEndCheckError.MSG = {0}は月末を設定してください。
 UpdatablePeriodError.ID = RCO00045
 UpdatablePeriodError.TYPE = Error
 UpdatablePeriodError.MSG = 契約更新可能期間外のため契約の承認依頼は行えません。（契約更新可能期間：{0}から、{1}まで）
+CannotContractAutoUpdateByNotExistsExtendedMachineError.ID = RCO00046
+CannotContractAutoUpdateByNotExistsExtendedMachineError.TYPE = Error
+CannotContractAutoUpdateByNotExistsExtendedMachineError.MSG = 延長可能な機種が存在しないため、契約自動更新は行えません。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
