メッセージ変更

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -165,7 +165,7 @@ LengthCheckError.TYPE = Error
 LengthCheckError.MSG = {0}は{1}桁で入力してください。
 ErrorMailSendFatal.ID = ROT00047
 ErrorMailSendFatal.TYPE = Fatal
-ErrorMailSendFatal.MSG = エラーメールを送信したメールが発生しています。
+ErrorMailSendFatal.MSG = エラーメールを送信したメールが存在します。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
