--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -447,6 +447,9 @@ CannotContractAutoUpdateByNotExistsExtendedMachineError.MSG = 延長可能な機
 UpgradeablePeriodError.ID = RCO00047
 UpgradeablePeriodError.TYPE = Error
 UpgradeablePeriodError.MSG = アップグレード可能期間外のため契約の承認依頼は行えません。（アップグレード可能期間：{0}まで）
+ContractChangeConclusionPreferredDateImpossibleError.ID = RCO00048
+ContractChangeConclusionPreferredDateImpossibleError.TYPE = Error
+ContractChangeConclusionPreferredDateImpossibleError.MSG = サービス利用希望日が{0}の契約変更は行えません。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
