--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -389,7 +389,7 @@ ShortestDeliveryDateImpossibleError.TYPE = Error
 ShortestDeliveryDateImpossibleError.MSG = お届け日に関してはソフトバンクか商品担当区にお問合せください。
 DeliveryCdHasNoRelateionToBillingCustomerSpCodeError.ID = RCO00034
 DeliveryCdHasNoRelateionToBillingCustomerSpCodeError.TYPE = Error
-DeliveryCdHasNoRelateionToBillingCustomerSpCodeError.MSG = 届先コードを変更して下さい。\n顧客企業の上流システムコードに紐づかない届先コードが入力されています。\n正しい上流システムコードをご確認・選択の上、それに紐づく適切な届先コードを選択してください。\n※上流システムコードに紐付くエンドユーザーの届先が存在しない場合は新規で作成し、翌日にCOTOSに登録してください。
+DeliveryCdHasNoRelateionToBillingCustomerSpCodeError.MSG = 届先コードを変更して下さい。顧客企業の上流システムコードに紐づかない届先コードが入力されています。
 
 #エラーID(手配)
 EntityDoesNotExistArrangement.ID = RAR00001
