--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -289,6 +289,9 @@ VupLinkageCancellationFoundError.MSG = 解約はV-UP反映不要です。
 RunningPricesUnMatchError.ID = RES00023
 RunningPricesUnMatchError.TYPE = Error
 RunningPricesUnMatchError.MSG = ランニングの明細の価格と品種マスタの価格が一致しません。
+CannotChangeCommercialFlowDivError.ID = RES00024
+CannotChangeCommercialFlowDivError.TYPE = Error
+CannotChangeCommercialFlowDivError.MSG = 商流変更不可商品のため商流区分は変更できません。
 
 #エラーID(契約)
 EntityDoesNotExistContract.ID = RCO00001
