グループ承認の場合、代理承認者は設定できないエラーメッセージを追加

--- a/src/main/resources/Messages.properties
+++ b/src/main/resources/Messages.properties
@@ -160,6 +160,9 @@ CommentLengthOverError.MSG = コメントは255文字以内で入力してくだ
 ApprovalRouteInvalidError.ID = ROT00044
 ApprovalRouteInvalidError.TYPE = Error
 ApprovalRouteInvalidError.MSG = 承認ルートの設定に不備があります。管理者にお問い合わせください。
+GroupApprovalInvalidSubApproverError.ID = ROT00045
+GroupApprovalInvalidSubApproverError.TYPE = Error
+GroupApprovalInvalidSubApproverError.MSG = 社員グループの承認の場合は、代理承認者を設定できません。
 
 #エラーID(共通:ファイル系)
 FileNotFoundError.ID = ROT00100
